--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
   
   <!-- AnimeJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
   
   <!-- JQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
   <div class="container">
@@ -64,9 +64,15 @@
     <ul>
       <li>
         <ion-icon name="logo-facebook"></ion-icon>
+      </li>
+      <li>
         <ion-icon name="logo-twitter"></ion-icon>
+      </li>
+      <li>
         <ion-icon name="logo-instagram"></ion-icon>
-        <ion-icon name="logo-github"></ion-icon>
+      </li>
+      <li>
+        <ion-icon name="logo-github"f></ion-icon>
       </li>
     </ul>
   </div>
