heading and copyright customized(feat)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="header">
     <h1 class="ml7" id="title">
       <span class="text-wrapper">
-        <span class="letters">The connected world</span>
+        <span class="letters">Front Web Dev</span>
       </span>
     </h1>
     <p id="tagline" class="p1">
@@ -57,7 +57,9 @@
   <div class="bottom-text">+0.0001db</div>
   <div class="copyright">
     &copy; 2019 by 
-    <span class="upperletter">A.</span>Schemelev.
+    <span class="upperletter">A.</span><span class="lastName">Schemelev</span>.
+    Designed with passion
+    <ion-icon name="heart"></ion-icon>.
     All rights reserved.
   </div>
   <div class="media">
