minor content changes(fix)

--- a/index.html
+++ b/index.html
@@ -32,11 +32,9 @@
     </div>
   </div>
   <div class="logo">
-    <ion-icon name="git-compare"></ion-icon>
-    FilesFiddle
+    <ion-icon name="moon"></ion-icon>
+    Choose your side
   </div>
-  <div class="contact">GET IN TOUCH</div>
-  <div class="menu"><ion-icon name="options"></ion-icon></div>
   <div class="header">
     <h1 class="ml7" id="title">
       <span class="text-wrapper">
@@ -54,27 +52,25 @@
       <button id="one">Download</button>
     </div>
   </div>
-  <div class="bottom-text">+0.0001db</div>
   <div class="copyright">
     &copy; 2019 by 
-    <span class="upperletter">A.</span><span class="lastName">Schemelev</span>.
+    <span class="lastName">A.Schemelev</span>.
     Designed with passion
     <ion-icon name="heart"></ion-icon>.
-    All rights reserved.
   </div>
   <div class="media">
     <ul>
       <li>
-        <ion-icon name="logo-facebook"></ion-icon>
+        <ion-icon name="logo-skype" size="large"></ion-icon>
       </li>
       <li>
-        <ion-icon name="logo-twitter"></ion-icon>
+        <ion-icon name="logo-google" size="large"></ion-icon>
       </li>
       <li>
-        <ion-icon name="logo-instagram"></ion-icon>
+        <ion-icon name="logo-instagram" size="large"></ion-icon>
       </li>
       <li>
-        <ion-icon name="logo-github"f></ion-icon>
+        <ion-icon name="logo-github" size="large"></ion-icon>
       </li>
     </ul>
   </div>
