--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="header">
         <h1 class="ml7" id="title">
           <span class="text-wrapper">
-            <span class="letters">Fullstack Web Dev</span>
+            <span class="letters">Full stack Web Dev</span>
           </span>
         </h1>
         <p id="tagline" class="p1">
@@ -128,7 +128,9 @@
           </div>
         </div>
         <div class="buttons">
-          <button id="one">Download</button>
+          <form method="get" action="Aleksandr_Schemelev_-_Full_Stack_Engineer.pdf" target="_blank">
+            <button id="one">Download</button>
+         </form>
         </div>
       </div>
       <div class="copyright">
