feat: url shortener add to projects

--- a/index.html
+++ b/index.html
@@ -177,20 +177,20 @@
     <section class="panel">
       <div class="container">
         <div class="wrapper">
-          <div class="project__image project__image--marioplan"></div>
+          <div class="project__image project__image--url-shortener"></div>
           <div class="project-info">
-            <div class="project__title">MarioPlan</div>
-            <div class="project__description">This app uses Firebase to store users stories.</div>
+            <div class="project__title">Url shortener</div>
+            <div class="project__description">This app uses Mongodb to store users urls.</div>
             <div class="project__technologies">
               <img src="./assets/img/react.png" alt="react" />
-              <img src="./assets/img/redux.png" alt="redux" />
-              <img src="./assets/img/firebase.png" alt="firebase" />
+              <img src="./assets/img/mongodb.png" alt="mongodb" />
+              <img src="./assets/img/bootsrap.png" alt="bootsrap" />
               <img src="./assets/img/css3.png" alt="css3" />
               <img src="./assets/img/html5.png" alt="html5" />
             </div>
             <div class="project__links">
-              <a href="https://github.com/AntiHero/ReactProjectTemplate1" target="_blank">Source</a>
-              <a href="https://zerohelp-marioplan.netlify.app" target="_blank">Watch live</a>
+              <a href="https://github.com/AntiHero/URLShortener" target="_blank">Source</a>
+              <a href="https://zhs-url.herokuapp.com/" target="_blank">Watch live</a>
             </div>
           </div>
         </div>
