--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <div class="project__title">Excel</div>
             <div class="project__description">Javascript. A loooooot of Javascript. This app implements basic excel features and allows user to create tables and store them</div>
             <div class="project__technologies">
-              <img src="./assets/img/react.png" alt="react" />
+              <img src="./assets/img/javascript.png" alt="javascript" />
               <img src="./assets/img/webpack.png" alt="webpack" />
               <img src="./assets/img/css3.png" alt="css3" />
               <img src="./assets/img/html5.png" alt="html5" />
