add cv in pdf format

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    
+
     <!-- AnimeJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
 
@@ -43,7 +43,8 @@
         </h1>
         <p id="tagline" class="p1">
           Hello! My name is Aleksandr. <br />
-          I'm fullstack engineer who is looking for opportunities in the field.<br />
+          I'm fullstack engineer who is looking for opportunities in the
+          field.<br />
           My main goal is to provide my clients best solutions as in frontend so
           and in backend!
         </p>
@@ -55,9 +56,7 @@
             <span class="dot" data-index="2"></span>
           </div>
           <div class="slide slide--active">
-            <p id="tagline" class="p2">
-              Skills
-            </p>
+            <p id="tagline" class="p2">Skills</p>
             <div id="tagline" class="skills-wrapper skills-wrapper--soft">
               <ul aria-label="Frontend">
                 <li>HTML5 <img src="./assets/img/html5.png" alt="html5" /></li>
@@ -83,14 +82,17 @@
                 <li>
                   GraphQl <img src="./assets/img/graphql.png" alt="graphql" />
                 </li>
-                <li>Python <img src="./assets/img/python.png" alt="python" /></li>
+                <li>
+                  Python <img src="./assets/img/python.png" alt="python" />
+                </li>
               </ul>
               <ul aria-label="Database">
                 <li>
                   MongoDb <img src="./assets/img/mongodb.png" alt="mongodb" />
                 </li>
                 <li>
-                  Firebase <img src="./assets/img/firebase.png" alt="firebase" />
+                  Firebase
+                  <img src="./assets/img/firebase.png" alt="firebase" />
                 </li>
                 <li>
                   PostgreSQL
@@ -100,9 +102,7 @@
             </div>
           </div>
           <div class="slide">
-            <p id="tagline" class="p2">
-              Languages I speak
-            </p>
+            <p id="tagline" class="p2">Languages I speak</p>
             <div id="tagline" class="skills-wrapper">
               <ul aria-label="Russian">
                 <li>Native</li>
@@ -113,9 +113,7 @@
             </div>
           </div>
           <div class="slide">
-            <p id="tagline" class="p2">
-              Other
-            </p>
+            <p id="tagline" class="p2">Other</p>
             <div id="tagline" class="skills-wrapper">
               <ul aria-label="Soft skills">
                 <li>Flexibility</li>
@@ -128,9 +126,13 @@
           </div>
         </div>
         <div class="buttons">
-          <form method="get" action="Aleksandr_Schemelev_-_Full_Stack_Engineer.pdf" target="_blank">
+          <form
+            method="get"
+            action="Aleksandr_Schemelev_-_Front_End_Engineer.pdf"
+            target="_blank"
+          >
             <button id="one">Download</button>
-         </form>
+          </form>
         </div>
       </div>
       <div class="copyright">
@@ -159,7 +161,11 @@
           <div class="project__image project__image--gosurf"></div>
           <div class="project-info">
             <div class="project__title">GoSurf</div>
-            <div class="project__description">This is one of my favourite frontend works. Cool Design. A lot of animations, including complicated svg and slider animations. Fully responsive.</div>
+            <div class="project__description">
+              This is one of my favourite frontend works. Cool Design. A lot of
+              animations, including complicated svg and slider animations. Fully
+              responsive.
+            </div>
             <div class="project__technologies">
               <img src="./assets/img/javascript.png" alt="javascript" />
               <img src="./assets/img/gulp.png" alt="gulp" />
@@ -167,8 +173,14 @@
               <img src="./assets/img/html5.png" alt="html5" />
             </div>
             <div class="project__links">
-              <a href="https://github.com/AntiHero/GoSurf/tree/gh-pages" target="_blank">Source</a>
-              <a href="https://antihero.github.io/GoSurf/app/" target="_blank">Watch live</a>
+              <a
+                href="https://github.com/AntiHero/GoSurf/tree/gh-pages"
+                target="_blank"
+                >Source</a
+              >
+              <a href="https://antihero.github.io/GoSurf/app/" target="_blank"
+                >Watch live</a
+              >
             </div>
           </div>
         </div>
@@ -180,7 +192,9 @@
           <div class="project__image project__image--url-shortener"></div>
           <div class="project-info">
             <div class="project__title">Url shortener</div>
-            <div class="project__description">This app uses Mongodb to store users urls.</div>
+            <div class="project__description">
+              This app uses Mongodb to store users urls.
+            </div>
             <div class="project__technologies">
               <img src="./assets/img/react.png" alt="react" />
               <img src="./assets/img/mongodb.png" alt="mongodb" />
@@ -189,8 +203,12 @@
               <img src="./assets/img/html5.png" alt="html5" />
             </div>
             <div class="project__links">
-              <a href="https://github.com/AntiHero/URLShortener" target="_blank">Source</a>
-              <a href="https://zhs-url.herokuapp.com/" target="_blank">Watch live</a>
+              <a href="https://github.com/AntiHero/URLShortener" target="_blank"
+                >Source</a
+              >
+              <a href="https://zhs-url.herokuapp.com/" target="_blank"
+                >Watch live</a
+              >
             </div>
           </div>
         </div>
@@ -202,15 +220,22 @@
           <div class="project__image project__image--covid"></div>
           <div class="project-info">
             <div class="project__title">Covid-19</div>
-            <div class="project__description">Covid-19 app provides information about covid cases in countries and shows general statistics.</div>
+            <div class="project__description">
+              Covid-19 app provides information about covid cases in countries
+              and shows general statistics.
+            </div>
             <div class="project__technologies">
               <img src="./assets/img/react.png" alt="react" />
               <img src="./assets/img/css3.png" alt="css3" />
               <img src="./assets/img/html5.png" alt="html5" />
             </div>
             <div class="project__links">
-              <a href="https://github.com/AntiHero/COVID-19" target="_blank">Source</a>
-              <a href="https://covid-19-zhstudio.netlify.app/" target="_blank">Watch live</a>
+              <a href="https://github.com/AntiHero/COVID-19" target="_blank"
+                >Source</a
+              >
+              <a href="https://covid-19-zhstudio.netlify.app/" target="_blank"
+                >Watch live</a
+              >
             </div>
           </div>
         </div>
@@ -222,7 +247,10 @@
           <div class="project__image project__image--excel"></div>
           <div class="project-info">
             <div class="project__title">Excel</div>
-            <div class="project__description">Javascript. A loooooot of Javascript. This app implements basic excel features and allows user to create tables and store them</div>
+            <div class="project__description">
+              Javascript. A loooooot of Javascript. This app implements basic
+              excel features and allows user to create tables and store them
+            </div>
             <div class="project__technologies">
               <img src="./assets/img/javascript.png" alt="javascript" />
               <img src="./assets/img/webpack.png" alt="webpack" />
@@ -230,8 +258,14 @@
               <img src="./assets/img/html5.png" alt="html5" />
             </div>
             <div class="project__links">
-              <a href="https://github.com/AntiHero/Excel/tree/gh-pages" target="_blank">Source</a>
-              <a href="https://antihero.github.io/Excel/public/" target="_blank">Watch live</a>
+              <a
+                href="https://github.com/AntiHero/Excel/tree/gh-pages"
+                target="_blank"
+                >Source</a
+              >
+              <a href="https://antihero.github.io/Excel/public/" target="_blank"
+                >Watch live</a
+              >
             </div>
           </div>
         </div>
@@ -240,6 +274,5 @@
     <!-- js -->
     <script src="assets/index.js"></script>
     <script src="assets/slide.js"></script>
-
   </body>
 </html>
